Created Models & Main Skeleton

--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %} {% block content %} {%load crispy_forms_tags%}
+{% extends "users/base.html" %} {% block content %} {%load crispy_forms_tags%}
 <h2>Loged Out Succefly</h2>  
   <div class="border-top pt-3">
     <small class="text-muted">
