--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -1,44 +1,155 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
+    {% if title %}
+    <title>{{title}}</title>
+    {% else %}
+    <title>Quizzer</title>
+    {% endif %}
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-
-    <title>{{ title }}</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          {%if messages%} {%for message in messages%}
-          <div class="alert alert-{{message.tags}}">{{message}}</div>
-          {%endfor%} {%endif%} {% block content %}{% endblock %}
-        </div>
-      </div>
-    </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
-    ></script>
+    />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+                crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    -->
+    <style>
+      nav div a:hover {
+        text-decoration: none;
+        color: #f7d372;
+      }
+
+      nav {
+        background-color: #283071;
+        color: #fff;
+        font-weight: 600;
+      }
+
+      nav div a span {
+        font-size: x-large;
+      }
+
+      .selected {
+        font-weight: 800;
+        color: #f7d372;
+      }
+
+      .avatar {
+        vertical-align: middle;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+      }
+
+      .fa-bars {
+        color: #fff;
+        cursor: pointer;
+      }
+
+      h1 {
+        font-size: 40px;
+        display: block;
+      }
+
+      h2 {
+        font-size: 32px;
+      }
+
+      h3 {
+        font-size: 22px;
+      }
+
+      .btn-yellow {
+        background-color: #f7d372;
+        color: #283071;
+        font-weight: bold;
+      }
+
+      .btn-yellow:hover {
+        background-color: orange;
+      }
+
+      footer {
+        background-color: #283071;
+        color: white;
+        text-align: center;
+        padding: 10%;
+      }
+
+      .left {
+        width: 50%;
+      }
+
+      .right {
+        width: 50%;
+      }
+
+      #group_not_found {
+        display: none;
+      }
+
+      @media (max-width: 575px) {
+        #join_group_section_image {
+          display: none;
+        }
+      }
+    </style>
+  </head>
+  <body {% block bd %}{% endblock %}  ">
+    <!--********************************************  NAV BAR ************************************************-->
+    <!---------------------------------------------------------------------------------------------------------->
+    <nav class="navbar navbar-dark flex justify-between">
+      <div>
+        <a href="{% url 'quiz-home' %}"
+          ><span style="font-weight: bold; font-size: 10mm">Quizzer</span></a
+        >
+      </div>
+      {%if user.is_authenticated%}
+      <div>
+        <a href="{% url 'quiz-home' %}" class="mx-3"><span class="selected">Home</span></a>
+        <a href="{% url 'quiz-groups' %}" class="mx-3"><span>Groups</span></a>
+        <a href="{% url 'quiz-quizzes' %}" class="mx-3"><span>Quizzes</span></a>
+        <a href="{% url 'quiz-about_us' %}" class="mx-3"><span>About us</span></a>
+      </div>
+
+      <div class="flex justify-end" style="padding: 10px">
+        <a href="/logout" class="mx-3"><span>Logout</span></a>
+        <i class="fas fa-bars fa-2x mt-2 mr-3"></i>
+        
+        <a href="{% url 'quiz-profile' %}"><img class="avatar" src="media/avatar2.jpg" /></a>
+      </div>
+      {%else%}
+      <a class="nav-item nav-link" href="{%url 'login'%}">Login</a>
+      <a class="nav-item nav-link" href="{%url 'register'%}">Register</a>
+      {%endif%}
+    </nav>
+    <!--********************************************  NAV BAR ************************************************-->
+    <!---------------------------------------------------------------------------------------------------------->
+
+    {% block content %}{% endblock %}
   </body>
 </html>
