--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -1,9 +1,196 @@
-{% extends "quiz/base.html" %} {% block content %}
+{% extends "quiz/base.html" %} {% block bd %} onload="fetch_groups() {% endblock bd %}
+
+{% block content %}
 <div class="container">
-  {% if user.is_authenticated and user.is_teacher %}
-  <h1>Hi Teacher</h1>
-  {% elif user.is_authenticated and user.is_student %}
-  <h1>Hi Student</h1>
-  {%endif%}
+  <!--********************************************  Join Group *********************************************-->
+  <!---------------------------------------------------------------------------------------------------------->
+  <div class="section mt-5 flex justify-center row">
+    <div class="left flex justify-center col-12 col-md-6">
+      <div class="flex justify-center flex-col">
+        <h1 class="mb-3">Join Group</h1>
+        <h3 style="color: #5a5a5a">
+          If you don't have the group id please ask your instructor<br />
+          to give it to you
+        </h3>
+        <div class="mt-5">
+          <form class="row">
+            <div class="form-group col-8">
+              <input
+                type="text"
+                name="group_id"
+                class="form-control"
+                placeholder="Group ID"
+                value=""
+              />
+            </div>
+            <div class="form-group">
+              <button type="button" onclick="" class="btn btn-yellow">
+                Join
+              </button>
+            </div>
+          </form>
+        </div>
+        <p style="color: red; font-size: 5mm" id="group_not_found">
+          Group not found
+        </p>
+      </div>
+    </div>
+
+    <div class="row right" id="join_group_section_image">
+      <img src="media/join_group.svg" />
+    </div>
+  </div>
+
+  <!--********************************************  Join Group *********************************************-->
+  <!---------------------------------------------------------------------------------------------------------->
+
+  <!--*********************************************** Groups ***********************************************-->
+  <!---------------------------------------------------------------------------------------------------------->
+  <div class="mt-14">
+    <h1 style="text-align: center">Your Groups</h1>
+
+    <div class="row mt-5 justify-center" id="groups_container"></div>
+  </div>
+
+  <!--*********************************************** Groups ***********************************************-->
+  <!---------------------------------------------------------------------------------------------------------->
+
+  <br />
+  <br />
+  <br />
+  <br />
+
+  <!--*********************************************** Quizzes ***********************************************-->
+  <!---------------------------------------------------------------------------------------------------------->
+
+  <div class="mt-14">
+    <h1 style="text-align: center">Your Quizzes</h1>
+    <div class="row mt-5 justify-center" id="quizzes_container"></div>
+  </div>
+
+  <!--*********************************************** Quizzes ***********************************************-->
+  <!---------------------------------------------------------------------------------------------------------->
 </div>
+
+<footer class="mt-5">
+  <p style="font-size: 10mm; font-weight: bold">
+    Copyrights @ 2021 AAST graduation team
+  </p>
+</footer>
+
+<script>
+  function fetch_groups() {
+    var cont = document.getElementById("groups_container");
+    var groups_dict = [
+      {
+        title: "Algorithms",
+        link: "#",
+        img_src: "media/avatar.jpg",
+      },
+      {
+        title: "Big Data",
+        link: "#",
+        img_src: "media/avatar.jpg",
+      },
+      {
+        title: "Digital Image proccessing",
+        link: "#",
+        img_src: "media/avatar.jpg",
+      },
+    ];
+    for (g of groups_dict) {
+      var c = document.createElement("div");
+      c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
+      c.style.padding = "0px";
+      c.style.textAlign = "center";
+      c.innerHTML =
+        '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
+        '<div class="card-body">' +
+        '<h3 class="card-title">' +
+        g.title +
+        '</h3><a href="' +
+        g.link +
+        '" class="btn btn-yellow">View Group</a></div>';
+      cont.appendChild(c);
+    }
+    fetch_quizzes();
+  }
+
+  function fetch_quizzes() {
+    var cont = document.getElementById("quizzes_container");
+    var quizzes_dict = [
+      {
+        img_src: "media/avatar.jpg",
+        title: "Sorting",
+        group: "Algortihms",
+        date: "25/4/2021",
+        time: "5:00",
+        duration: "5 hours",
+        link: "/quiz",
+      },
+      {
+        img_src: "media/avatar.jpg",
+        title: "Sorting",
+        group: "Algortihms",
+        date: "25/4/2021",
+        time: "5:00",
+        duration: "5 hours",
+        link: "/quiz",
+      },
+      {
+        img_src: "media/avatar.jpg",
+        title: "Sorting",
+        group: "Algortihms",
+        date: "25/4/2021",
+        time: "5:00",
+        duration: "5 hours",
+        link: "/quiz",
+      },
+    ];
+    for (q of quizzes_dict) {
+      var c = document.createElement("div");
+      c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
+      c.style.padding = "0px";
+
+      c.innerHTML =
+        '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
+        '<div class="card-body">' +
+        ' <h3 class="card-title" style="text-align: center;"><b>' +
+        q.title +
+        "</b></h3>" +
+        "<h4><b>Quiz Group: </b>" +
+        q.group +
+        "</h4>" +
+        "<p><b>Date: </b>" +
+        q.date +
+        "</p>" +
+        "<p><b>Time: </b> " +
+        q.time +
+        " </p>" +
+        "<p><b>Duration: </b> " +
+        q.duration +
+        " </p>" +
+        '<div class="flex justify-center mt-3"><a href="' +
+        q.link +
+        '" class="btn btn-yellow">View Quiz</a></div>';
+      cont.appendChild(c);
+    }
+  }
+</script>
+
+<script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+  crossorigin="anonymous"
+></script>
 {% endblock content %}
