made group page fetch from end points

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -4,10 +4,7 @@
 <!---------------------------------------------------------------------------------------------------------->
 
 <div class="container">
-  <div
-    class="grid grid-cols-12 grid-rows-6 p-50 gap-12"
-    style="font-size: 32px; text-align: center; padding: 50px"
-  >
+  <div class="grid grid-cols-12 grid-rows-6 p-50 gap-12" style="font-size: 32px; text-align: center; padding: 50px">
     <p class="col-span-12 row-span-1">
       <b>Group:</b> <span id="group">Algorithms</span>
     </p>
@@ -20,11 +17,7 @@
     <p class="col-span-12 row-span-1">
       <b>Duration:</b> <span id="duration">1:30</span>
     </p>
-    <p
-      class="col-span-12 row-span-1"
-      style="color: red; display: none"
-      id="not_yet"
-    >
+    <p class="col-span-12 row-span-1" style="color: red; display: none" id="not_yet">
       Not Yet
     </p>
     <button class="btn btn-yellow col-span-12" onclick="attemp()">
@@ -90,19 +83,10 @@
     window.location.href = "/attemp";
   }
 </script>
-<script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 {% endblock content %}
