--- a/quiz/templates/quiz/groups.html
+++ b/quiz/templates/quiz/groups.html
@@ -15,20 +15,10 @@
         <div class="mt-5">
           <form class="row">
             <div class="form-group col-8">
-              <input
-                type="text"
-                name="group_name"
-                class="form-control"
-                placeholder="Group Name"
-                value=""
-              />
+              <input type="text" name="group_name" class="form-control" placeholder="Group Name" value="" />
             </div>
             <div class="form-group">
-              <button
-                type="button"
-                onclick="create_group()"
-                class="btn btn-yellow"
-              >
+              <button type="button" onclick="create_group()" class="btn btn-yellow">
                 Create
               </button>
             </div>
@@ -47,20 +37,10 @@
         <div class="mt-5">
           <form class="row">
             <div class="form-group col-8">
-              <input
-                type="text"
-                name="group_id"
-                class="form-control"
-                placeholder="Group ID"
-                value=""
-              />
+              <input type="text" name="group_id" class="form-control" placeholder="Group ID" value="" />
             </div>
             <div class="form-group">
-              <button
-                type="button"
-                onclick="join_group()"
-                class="btn btn-yellow"
-              >
+              <button type="button" onclick="join_group()" class="btn btn-yellow">
                 Join
               </button>
             </div>
@@ -79,11 +59,7 @@
 <div class="mt-14">
   <h1 style="text-align: center">Your Groups</h1>
 
-  <div
-    class="row mt-5 justify-center"
-    id="groups_container"
-    style="margin: 50px 0px 0px 0px"
-  ></div>
+  <div class="row mt-5 justify-center" id="groups_container" style="margin: 50px 0px 0px 0px"></div>
 </div>
 
 <!--*********************************************** Groups ***********************************************-->
@@ -102,51 +78,40 @@
     e.style.display = "none";
   }
   function fetch_groups() {
-    var cont = document.getElementById("groups_container");
-    var groups_dict = [
-      {
-        title: "Algorithms",
-        link: "#",
-        img_src: "media/avatar.jpg",
-      },
-      {
-        title: "Big Data",
-        link: "#",
-        img_src: "media/avatar.jpg",
-      },
-      {
-        title: "Digital Image proccessing",
-        link: "#",
-        img_src: "media/avatar.jpg",
-      },
-    ];
-    for (g of groups_dict) {
-      var c = document.createElement("div");
-      c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
-      c.style.padding = "0px";
-      c.style.textAlign = "center";
-      c.innerHTML =
-        '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
-        '<div class="card-body">' +
-        '<h3 class="card-title">' +
-        g.title +
-        '</h3><a href="' +
-        g.link +
-        '" class="btn btn-yellow">View Group</a></div>';
-      cont.appendChild(c);
-    }
+    fetch('list_user_groups/')
+      .then(function (u) { return u.json() })
+      .then(function (groups_dict) {
+        var cont = document.getElementById("groups_container");
+
+        for (g of groups_dict) {
+          var c = document.createElement("div");
+          c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
+          c.style.padding = "0px";
+          c.style.textAlign = "center";
+          c.innerHTML =
+            '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
+            '<div class="card-body">' +
+            '<h3 class="card-title">' +
+            g.group_name +
+            '</h3><button onClick = "on_clicked_group(' + g.group_id + ')"' +
+            'view_group' +
+            ' class="btn btn-yellow">View Group</button></div>';
+          cont.appendChild(c);
+        }
+      })
+  }
+
+  function on_clicked_group(group_id) {
+
+    localStorage['group_id'] = group_id
+    window.location.href = "/view_group";
   }
 </script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 {% endblock content %}
