--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -15,13 +15,7 @@
         <div class="mt-5">
           <form class="row">
             <div class="form-group col-8">
-              <input
-                type="text"
-                name="group_id"
-                class="form-control"
-                placeholder="Group ID"
-                value=""
-              />
+              <input type="text" name="group_id" class="form-control" placeholder="Group ID" value="" />
             </div>
             <div class="form-group">
               <button type="button" onclick="" class="btn btn-yellow">
@@ -80,113 +74,97 @@
 
 <script>
   function fetch_groups() {
-    var cont = document.getElementById("groups_container");
-    var groups_dict = [
-      {
-        title: "Algorithms",
-        link: "#",
-        img_src: "media/avatar.jpg",
-      },
-      {
-        title: "Big Data",
-        link: "#",
-        img_src: "media/avatar.jpg",
-      },
-      {
-        title: "Digital Image proccessing",
-        link: "#",
-        img_src: "media/avatar.jpg",
-      },
-    ];
-    for (g of groups_dict) {
-      var c = document.createElement("div");
-      c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
-      c.style.padding = "0px";
-      c.style.textAlign = "center";
-      c.innerHTML =
-        '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
-        '<div class="card-body">' +
-        '<h3 class="card-title">' +
-        g.title +
-        '</h3><a href="' +
-        g.link +
-        '" class="btn btn-yellow">View Group</a></div>';
-      cont.appendChild(c);
-    }
+
+    fetch('list_user_groups/')
+      .then(function (u) { return u.json() })
+      .then(function (groups_dict) {
+
+        var cont = document.getElementById("groups_container");
+
+        for (g of groups_dict) {
+          var c = document.createElement("div");
+          c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
+          c.style.padding = "0px";
+          c.style.textAlign = "center";
+          c.innerHTML =
+            '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
+            '<div class="card-body">' +
+            '<h3 class="card-title">' +
+            g.group_name +
+            '</h3><button onClick = "on_clicked_group(' + g.group_id + ')"' +
+            'view_group' +
+            ' class="btn btn-yellow">View Group</button></div>';
+          cont.appendChild(c);
+        }
+      })
     fetch_quizzes();
   }
 
-  function fetch_quizzes() {
-    var cont = document.getElementById("quizzes_container");
-    var quizzes_dict = [
-      {
-        img_src: "media/avatar.jpg",
-        title: "Sorting",
-        group: "Algortihms",
-        date: "25/4/2021",
-        time: "5:00",
-        duration: "5 hours",
-        link: "/quiz",
-      },
-      {
-        img_src: "media/avatar.jpg",
-        title: "Sorting",
-        group: "Algortihms",
-        date: "25/4/2021",
-        time: "5:00",
-        duration: "5 hours",
-        link: "/quiz",
-      },
-      {
-        img_src: "media/avatar.jpg",
-        title: "Sorting",
-        group: "Algortihms",
-        date: "25/4/2021",
-        time: "5:00",
-        duration: "5 hours",
-        link: "/quiz",
-      },
-    ];
-    for (q of quizzes_dict) {
-      var c = document.createElement("div");
-      c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
-      c.style.padding = "0px";
+  function on_clicked_group(group_id) {
 
-      c.innerHTML =
-        '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
-        '<div class="card-body">' +
-        ' <h3 class="card-title" style="text-align: center;"><b>' +
-        q.title +
-        "</b></h3>" +
-        "<h4><b>Quiz Group: </b>" +
-        q.group +
-        "</h4>" +
-        "<p><b>Date: </b>" +
-        q.date +
-        "</p>" +
-        "<p><b>Time: </b> " +
-        q.time +
-        " </p>" +
-        "<p><b>Duration: </b> " +
-        q.duration +
-        " </p>" +
-        '<div class="flex justify-center mt-3"><a href="' +
-        q.link +
-        '" class="btn btn-yellow">View Quiz</a></div>';
-      cont.appendChild(c);
-    }
+    localStorage['group_id'] = group_id
+    window.location.href = "/view_group";
+
+  }
+
+  function fetch_quizzes() {
+
+    fetch('list_groups_quizzes/')
+      .then(function (u) { return u.json() })
+      .then(function (quizzes_dict) {
+        console.log(quizzes_dict)
+
+        var cont = document.getElementById("quizzes_container");
+        for (q of quizzes_dict) {
+          q.quiz_date = new Date(Date.parse(q.quiz_date))
+          var quiz_date = new Date();
+          var dd = String(q.quiz_date.getDate()).padStart(2, "0");
+          var mm = String(q.quiz_date.getMonth() + 1).padStart(2, "0"); //January is 0!
+          var yyyy = q.quiz_date.getFullYear();
+          quiz_date = dd + "/" + mm + "/" + yyyy;
+
+          var quiz_time = q.quiz_date.getUTCHours() + ':' + q.quiz_date.getUTCMinutes();
+
+          var c = document.createElement("div");
+          c.classList.add("card", "col-lg-3", "col-md-3", "col-sm-5", "m-4");
+          c.style.padding = "0px";
+
+          c.innerHTML =
+            '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
+            '<div class="card-body">' +
+            ' <h3 class="card-title" style="text-align: center;"><b>' +
+            q.quiz_title +
+            "</b></h3>" +
+            "<h4><b>Quiz Group: </b>" +
+            q.quiz_group +
+            "</h4>" +
+            "<p><b>Date: </b>" +
+            quiz_date +
+            "</p>" +
+            "<p><b>Time: </b> " +
+            quiz_time +
+            " </p>" +
+            "<p><b>Duration: </b> " +
+            q.quiz_duration +
+            " </p>" +
+            '<div class="flex justify-center mt-3"><button ' +
+            '" class="btn btn-yellow" onclick="view_quiz(' + q.quiz_id + ' )" >View Quiz</button></div>';
+          cont.appendChild(c);
+        }
+      })
+  }
+
+
+  function view_quiz(quiz_id) {
+    localStorage['quiz_id'] = quiz_id
+    window.location.href = "/quiz";
   }
 </script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 {% endblock content %}
