--- a/quiz/templates/quiz/quizzes.html
+++ b/quiz/templates/quiz/quizzes.html
@@ -45,90 +45,69 @@
     e.style.display = "none";
   }
   function fetch_quizzes() {
-    coming = document.getElementById("coming");
-    prev = document.getElementById("previous");
 
-    var quizzes_dict = [
-      {
-        img_src: "media/avatar.jpg",
-        title: "Sorting",
-        group: "Algortihms",
-        date: "25/4/2021",
-        time: "5:00",
-        duration: "2 hours",
-        link: "/quiz",
-      },
-      {
-        img_src: "media/avatar.jpg",
-        title: "Sorting",
-        group: "Algortihms",
-        date: "25/4/2021",
-        time: "5:00",
-        duration: "2 hours",
-        link: "/quiz",
-      },
-      {
-        img_src: "media/avatar.jpg",
-        title: "Sorting",
-        group: "Algortihms",
-        date: "25/4/2021",
-        time: "5:00",
-        duration: "2 hours",
-        link: "/quiz",
-      },
-    ];
+    fetch('list_groups_quizzes/')
+      .then(function (u) { return u.json() })
+      .then(function (quizzes_dict) {
+        coming = document.getElementById("coming");
+        prev = document.getElementById("previous");
 
-    for (q of quizzes_dict) {
-      var cont = document.createElement("div");
-      cont.classList.add("card", "col-md-3", "col-sm-5", "m-4");
-      cont.style.padding = "0px";
-      cont.innerHTML =
-        '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
-        '<div class="card-body">' +
-        ' <h3 class="card-title" style="text-align: center;"><b>' +
-        q.title +
-        "</b></h3>" +
-        "<h4><b>Quiz Group: </b>" +
-        q.group +
-        "</h4>" +
-        "<p><b>Date: </b>" +
-        q.date +
-        "</p>" +
-        "<p><b>Time: </b> " +
-        q.time +
-        " </p>" +
-        "<p><b>Duration: </b> " +
-        q.duration +
-        " </p>" +
-        '<div class="flex justify-center mt-3"><a href="' +
-        q.link +
-        '" class="btn btn-yellow">View Quiz</a></div>';
 
-      var today = new Date();
-      var dd = String(today.getDate()).padStart(2, "0");
-      var mm = String(today.getMonth() + 1).padStart(2, "0"); //January is 0!
-      var yyyy = today.getFullYear();
+        for (q of quizzes_dict) {
+          q.quiz_date = new Date(Date.parse(q.quiz_date))
+          var quiz_date = new Date();
+          var dd = String(q.quiz_date.getDate()).padStart(2, "0");
+          var mm = String(q.quiz_date.getMonth() + 1).padStart(2, "0"); //January is 0!
+          var yyyy = q.quiz_date.getFullYear();
+          quiz_date = dd + "/" + mm + "/" + yyyy;
 
-      today = dd + "/" + mm + "/" + yyyy;
-      if (q.date < today) prev.appendChild(cont);
-      else coming.appendChild(cont);
-    }
+          var quiz_time = q.quiz_date.getUTCHours() + ':' + q.quiz_date.getUTCMinutes();
+
+          var cont = document.createElement("div");
+          cont.classList.add("card", "col-md-3", "col-sm-5", "m-4");
+          cont.style.padding = "0px";
+          cont.innerHTML =
+            '<img class="card-img-top" src="media/avatar.jpg" alt="Card image cap"> ' +
+            '<div class="card-body">' +
+            ' <h3 class="card-title" style="text-align: center;"><b>' +
+            q.quiz_title +
+            "</b></h3>" +
+            "<h4><b>Quiz Group: </b>" +
+            q.quiz_group +
+            "</h4>" +
+            "<p><b>Date: </b>" +
+            quiz_date +
+            "</p>" +
+            "<p><b>Time: </b> " +
+            quiz_time +
+            " </p>" +
+            "<p><b>Duration: </b> " +
+            q.quiz_duration +
+            " </p>" +
+            '<div class="flex justify-center mt-3"><button ' +
+            '" class="btn btn-yellow" onclick="view_quiz(' + q.quiz_id + ' )" >View Quiz</button></div>';
+
+          var today = new Date();
+          if (q.quiz_date < today) prev.appendChild(cont);
+          else coming.appendChild(cont);
+        }
+      })
   }
 
   function create_quiz() {
     window.location.href = "/quiz_maker";
   }
+
+  function view_quiz(quiz_id) {
+    localStorage['quiz_id'] = quiz_id
+    window.location.href = "/quiz";
+  }
 </script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 {% endblock content %}
