Made group title and number of members dynamic

--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -91,7 +91,7 @@
             '<div class="card-body">' +
             '<h3 class="card-title">' +
             g.group_name +
-            '</h3><button onClick = "on_clicked_group(' + g.group_id + ')"' +
+            '</h3><button onClick = "on_clicked_group(' + g.id + ')"' +
             'view_group' +
             ' class="btn btn-yellow">View Group</button></div>';
           cont.appendChild(c);
