--- a/quiz/templates/quiz/view_group.html
+++ b/quiz/templates/quiz/view_group.html
@@ -4,8 +4,8 @@
 <!---------------------------------------------------------------------------------------------------------->
 <header style="background-image: url('media/avatar.jpg'); background-size: cover;">
   <div class="header flex justify-end flex-col" style="height: 700px; padding: 30px">
-    <p class="group_title" style="color: #fff;font-size: 100px;">Algorithms</p>
-    <p class="group_members_count" style="color: #fff;font-size: 70px;">3 members</p>
+    <p class="group_title" id="title" style="color: #fff;font-size: 100px;">Algorithms</p>
+    <p class="group_members_count" id="members_count" style="color: #fff;font-size: 70px;">3 members</p>
   </div>
 </header>
 
@@ -72,10 +72,16 @@
 <script>
   account_type = "Admin";
   function fetch_members() {
+    fetch('get_group_quizzes/' + localStorage['group_id'])
+      .then(function (u) { return u.json() })
+      .then(function (data) {
 
-    fetch('get_group_members/2')
+        document.getElementById('title').innerText = data[0].quiz_group
+      })
+    fetch('get_group_members/' + localStorage['group_id'])
       .then(function (u) { return u.json(); })
       .then(function (members_dict) {
+        document.getElementById('members_count').innerText = members_dict.length + ' Members'
         function options(role) {
           optionss =
             '<button class="btn btn-danger m-1">Remove Member</button></div>';
@@ -144,13 +150,13 @@
     fetch('get_group_quizzes/2')
       .then(function (u) { return u.json() })
       .then(function (quizzes_dict) {
-        
+
 
         coming = document.getElementById("coming");
         prev = document.getElementById("previous");
 
         for (q of quizzes_dict) {
-          q.quiz_date = new Date(Date.parse( q.quiz_date ))
+          q.quiz_date = new Date(Date.parse(q.quiz_date))
           var quiz_date = new Date();
           var dd = String(q.quiz_date.getDate()).padStart(2, "0");
           var mm = String(q.quiz_date.getMonth() + 1).padStart(2, "0"); //January is 0!
@@ -158,7 +164,7 @@
           quiz_date = dd + "/" + mm + "/" + yyyy;
 
           var quiz_time = q.quiz_date.getUTCHours() + ':' + q.quiz_date.getUTCMinutes();
-          
+
 
           var cont = document.createElement("div");
           cont.classList.add("card", "col-md-3", "col-sm-5", "m-4");
@@ -181,8 +187,8 @@
             "<p><b>Duration: </b> " +
             q.quiz_duration + ' Minutes' +
             " </p>" +
-            '<div class="flex justify-center mt-3"><button '+
-            '" class="btn btn-yellow" onclick="view_quiz('+q.quiz_id +' )" >View Quiz</button></div>';
+            '<div class="flex justify-center mt-3"><button ' +
+            '" class="btn btn-yellow" onclick="view_quiz(' + q.quiz_id + ' )" >View Quiz</button></div>';
 
 
 
@@ -199,7 +205,7 @@
     window.location.href = "/quiz_maker";
   }
 
-  function view_quiz(quiz_id){
+  function view_quiz(quiz_id) {
     localStorage['quiz_id'] = quiz_id
     window.location.href = "/quiz";
   }
